# queubious

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs  mobc_pool.rs
templates/: index.html  queubious.js
web_components/: package-lock.json  package.json  queueData.json  stencil.config.ts  tailwind.config.js
web_components/src/: components.d.ts  index.html
web_components/src/components/waiting-room/: queue-data.interface.ts  readme.md  waiting-room.css  waiting-room.e2e.ts  waiting-room.spec.ts  waiting-room.tsx
web_components/src/utils/: utils.spec.ts  utils.ts
