[package]
name = "queue"
version = "0.1.0"
authors = ["Mike Glenn <mike.glenn@me.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
listenfd = "0.3.3"
serde = "1.0.117"
jsonwebtoken = "7.2.0"
serde_derive = "1.0.117"
chrono = "0.4.19"
rdkafka = "0.24.0"
env_logger = "0.8.2"
log = "0.4.11"
tokio = "0.3.5"
futures = "0.3.8"
