[package]
name = "queubious"
version = "0.1.0"
authors = ["Mike Glenn <mike.glenn@me.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "queubious"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
actix-rt = "2.2.0"
actix-files = "0.6.0-beta.4"
actix-session = "0.5.0-beta.1"
actix-cors = "0.6.0-beta.1"
listenfd = "0.3.3"
serde = "1.0.125"
serde_derive = "1.0.125"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
rdkafka = "0.26.0"
env_logger = "0.8.3"
log = "0.4.14"
thiserror = "1.0.24"
uuid = { version = "0.8.2", features = ["v4"] }
tera = "1.7.1"
base64 = "0.13.0"
dotenv = "0.15.0"
redis = { version = "0.20.0", features = ["tokio-comp"] }
deadpool-redis = "0.7.1"